--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
+
+/* Inicio estilos sitio completo */
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-
 body  {
     background-image: url(../img/backround.jpg);
     color: white;
     font-family: 'Open Sans', sans-serif;
 }
-
 .carousel-item{
     height: 65vh;
     min-height: 300px;
     background: no-repeat center center scroll;
 }
-
-
-
-
 form {
     padding: 10px;
     margin: 1rem;
 }
-
-
 h1 {
     text-align: center;
     padding: 20px, 20px;
@@ -38,7 +31,6 @@ h1 {
     padding: 2px;
     margin: 2px;
 }
-
 h2 {
     text-align: center;
     padding: 20px, 20px;
@@ -49,8 +41,8 @@ h2 {
     padding: 2px;
     margin: 2px;
 }
-
-
+/* -------------- */
+/* -------------- */
 /* Inicio estilos Header */
 header {
     position: sticky;
@@ -63,13 +55,8 @@ header {
     margin: 1rem;
  }
 /* Fin estilos Header */
-
-
-
-
-
-
-
+/* -------------- */
+/* -------------- */
 /* Inicio estilos Footer */
 .footer{
     display: flex;
@@ -85,6 +72,19 @@ footer{
     margin-top: 4rem;
 }
 /* Fin estilos Footer */
+/* Fin estilos sitio completo */
+/* -------------- */
+
+.destinos-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 2fr));
+    align-items: center;
+    justify-items: center;
+    list-style-type: none;
+    gap: 0.5rem;
+    row-gap: 3rem;
+    padding: 0.5rem;
+}
 
 
 li {
@@ -148,16 +148,7 @@ h6 {
     list-style-type: none;
 }
 
-.destinos-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 2fr));
-    align-items: center;
-    justify-items: center;
-    list-style-type: none;
-    gap: 0.5rem;
-    row-gap: 3rem;
-    padding: 0.5rem;
-}
+
 
 .titulo-carta-cruceros{
 font-weight: 700;
