--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
-/* Inicio estilos sitio completo */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+/* Inicio estilos sitio completo */
 body {
   background-image: url(../img/backround.jpg);
   font-family: "Open Sans", sans-serif;
@@ -216,10 +216,4 @@ h6 {
 .titulo-carta-promociones {
   font-weight: 800;
   text-align: center;
-}
-
-/* .carrousel-promociones{
-    width: auto;
-    height: 100%;
-    } */
-/* .carousel-inner > .item > img{ margin:auto; } *//*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
