--- a/css/main.scss
+++ b/css/main.scss
@@ -1,9 +1,274 @@
+
+// @import url(./partials/_variables.scss);
+// @import url(./partials/_reset.scss);
+// @import url(./partials/_body.scss);
+// @import url(./partials/_contacto.scss);
+// @import url(./partials/_destinosycruceros.scss);
+// @import url(./partials/_footer.scss);
+// @import url(./partials/_header.scss);
+// @import url(./partials/_promociones.scss);
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
-@import url(./partials/_variables.scss);
-@import url(./partials/_reset.scss);
-@import url(./partials/_body.scss);
-@import url(./partials/_contacto.scss);
-@import url(./partials/_destinosycruceros.scss);
-@import url(./partials/_footer.scss);
-@import url(./partials/_header.scss);
-@import url(./partials/_promociones.scss);
+
+$colorH1: #E9D985;
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Inicio estilos sitio completo */
+
+
+body  {
+    background-image: url(../img/backround.jpg);
+    font-family: 'Open Sans', sans-serif;
+}
+
+.banner {
+    width: 65%;
+    padding: 1rem;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+
+.carousel-item{
+    img{
+    animation: kenburns-bottom 5s ease-in-out 0.5s alternate-reverse both;
+    }
+}
+ @keyframes kenburns-bottom {
+    0% {
+      transform: scale(1) translateY(0);
+      transform-origin: 50% 84%;
+    }
+    100% {
+      transform: scale(1.25) translateY(15px);
+      transform-origin: bottom;
+    }
+  }
+  
+.name-top{
+    text-align: center;
+    padding: 20px, 20px;
+    color: white;
+    font-style: bold;
+    margin: 2px;
+    h1{
+        color: #E9D985;
+        font-weight: 700;
+        font-size: 425%;
+    }
+    h2{
+        color: #E9D985;
+        font-weight: 500;
+        font-size: 300%;
+        padding: 2px;
+    }
+    p{
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 100;
+        margin: 1rem;
+        padding: 1rem;
+    }
+}
+/* Inicio estilos Header */
+header {
+    position: sticky;
+    top: 1rem;
+    z-index: 99 !important;
+    nav{
+        border-radius: 10px;
+        padding: 10rem;
+        margin: 1rem;
+    }
+}
+/* Fin estilos Header */
+footer{
+    display: flex;
+    flex-direction: row;
+    height: 3rem;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
+    padding: 1rem;
+
+    .p{
+        margin-top: 4rem;
+    }
+}
+/* Fin estilos sitio completo */
+/* -------------------------- */
+/* -------------------------- */
+/* -------------------------- */
+/* Inicio estilos Destinos y Cruceros*/
+.destinos-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 2fr));
+    align-items: center;
+    justify-items: center;
+    list-style-type: none;
+    gap: 0.5rem;
+    row-gap: 3rem;
+    padding: 0.5rem;
+}
+
+
+.card{
+    img{
+        height: 12rem;
+        width: 100%;
+        transition: 0.5s;
+        object-fit: cover;
+    }
+    img:hover{
+            transform: scale(1.05);
+        }
+
+}
+
+
+
+.cruises-list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 1rem;
+    list-style-type: none;
+    .titulo-carta-cruceros{
+        font-weight: 700;
+        justify-content: start;
+        }
+    .logo-cruises {
+        height: 2rem;
+        width: 2rem;
+        margin: 0.5rem;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        float: none;
+    }
+    .btn{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white !important;
+    }
+}
+
+.comentario-cruises{
+    text-align: center;
+    color: #E9D985;
+    font-size: xx-large;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 800;
+    font-style: normal;
+    box-sizing: border-box;
+    justify-content: center;
+    .h3{
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 200    ;
+        font-style: normal;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+    }
+}
+/* Fin estilos Destinos y Cruceros */
+/* -------------------------- */
+
+
+
+
+
+.carousel-item{
+    height: 65vh;
+    min-height: 300px;
+    background: no-repeat center center scroll;
+}
+
+
+
+
+form {
+    padding: 10px;
+    margin: 1rem;
+}
+
+
+
+
+
+li {
+    margin-right: 20px;
+}
+
+
+
+
+
+
+
+h6 {
+    text-align: justify;
+    margin: 1rem 2rem;
+}
+
+
+ .comentario-contacto {
+    margin-bottom: 10px;
+    text-align: left;
+    border: floralwhite;
+    border-top: 10px;
+    padding: 1rem;
+    background-color: rgba(0, 121, 155, 100);
+ }
+
+ .ventajas {
+    margin: 1rem;
+    padding: 1rem;
+ }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
+
+
+.promociones-list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 1rem;
+    margin-top: 4rem;
+    list-style-type: none;
+}
+
+.card-promociones{
+    padding: 3rem;
+    width: 100%;
+}
+
+.titulo-carta-promociones{
+    font-weight: 800;
+    text-align: center;
+    }
